--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .app {
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
 }
 
 body {
@@ -13,7 +16,17 @@ body {
   justify-content: space-between;
 }
 
+.app__left {
+  flex: 0.9;
+}
+
 .app__stats {
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 990px) {
+  .app {
+    flex-direction: column;
+  }
 }
