--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,16 @@ body {
 .app {
   display: flex;
   justify-content: space-evenly;
-  background-color: #f5f6fa;
   padding: 20px;
 }
 
 .app__dropdown {
   background-color: white;
+}
+
+.app__header > h1 {
+  color: #fc3c3c;
+  font-size: 2rem;
 }
 
 .app__header {
@@ -24,9 +28,8 @@ body {
   justify-content: space-between;
 }
 
-.app__header > h1 {
-  color: #fc3c3c;
-  font-size: 2rem;
+.app__left {
+  flex: 0.9;
 }
 
 .app__stats {
@@ -34,19 +37,24 @@ body {
   justify-content: space-between;
 }
 
-.app__left {
-  flex: 0.9;
+.app__right {
+  display: flex;
+  flex-direction: column;
 }
 
-.app__information > h3 {
-  color: #6a5d5d;
-  font-weight: 400;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
+.app__right .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
-.app__information > h3:last-of-type {
-  margin-top: 1rem;
+.app__graph {
+  flex-grow: 1;
+}
+
+.app__graphTitle {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 990px) {
